// Copyright 2021 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package car.metrics.domain;

option java_outer_classname = "CarMetricsDomain";

import "akkaserverless/annotations.proto";
option (akkaserverless.file).event_sourced_entity = {
	name: "CarMetricsEntity"
	entity_type: "eventsourced-car-metrics"	
	state: "CarMetricsState" 			
	events: ["ChargeLevelRecorded"]
};


message CarMetricsState {
	int32 remaining_watts = 1;
	int32 watts_capacity = 2;
}

message ChargeLevelRecorded {
	int32 remaining_watts = 1;
	int32 watts_capacity = 2;
}
